--- a/src/components/diffSelector.css
+++ b/src/components/diffSelector.css
@@ -33,7 +33,11 @@
 }
 
 @media only screen and (min-width: 600px) {
+  /*large screens*/
   .buttonsGrp {
     margin-top: 10%;
+  }
+  .diffButton {
+    width: 40%;
   }
 }
