--- a/src/components/styles/card.css
+++ b/src/components/styles/card.css
@@ -1,4 +1,5 @@
 .card {
+  position: relative;
   text-align: start;
   margin: auto;
   margin-top: 40px;
@@ -9,20 +10,67 @@
   box-shadow: 0px 4px 8px rgb(39, 39, 39);
 }
 .card h4 {
+  position: absolute;
+  top: 0%;
   margin: 0px;
   padding: 10px 0px 0px 10px;
   font-size: large;
   color: rgb(177, 177, 177);
 }
+h4.down {
+  top: 28%;
+}
 .card h2 {
+  position: absolute;
+  top: 10%;
+  left: 0px;
+  right: 0px;
   text-align: center;
   margin: auto;
   padding: 10px;
   color: rgb(255, 255, 255);
 }
+.card h6 {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 400;
+  position: absolute;
+  top: 55%;
+  left: 6%;
+  margin: 0px;
+  color: rgb(177, 177, 177);
+}
+h2.points {
+  top: 72%;
+  color: rgb(255, 187, 0);
+}
+.card input {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 400;
+  font-size: 24px;
+  width: 90%;
+  position: absolute;
+  top: 43%;
+  left: 5%;
+  text-align: center;
+  background-color: rgb(87, 87, 87);
+  color: white;
+  border: none;
+  border-bottom: 1px solid rgb(51, 51, 51);
+}
+.card input:focus {
+  outline: none;
+}
+input::-webkit-outer-spin-button,     /*arrow buttons in input box*/
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 
 @media only screen and (min-width: 600px) {
   .card {
     width: 40%;
+  }
+  .card h6 {
+    left: 22%;
   }
 }
