--- a/src/components/styles/Game.css
+++ b/src/components/styles/Game.css
@@ -7,7 +7,7 @@ h2 {
   color: red;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 400;
-  margin-bottom: 5px;
+  margin: 5px;
 }
 .bar {
   width: 100%;
@@ -22,7 +22,6 @@ h2 {
 }
 .startButton {
   margin: auto;
-  margin-top: 20px;
   display: block;
   border-radius: 10px;
   border: 1px solid rgb(16, 235, 158);
