--- a/src/index.css
+++ b/src/index.css
@@ -25,8 +25,14 @@ body {
   background-color: rgb(51, 51, 51);
 }
 .container {
+  display: flex;
+  flex-direction: column;
+  min-height: 80vh;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
   text-align: center;
-  padding: 5px;
+  margin-bottom: 40px;
 }
 button:focus {
   outline: none;
